--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -54,7 +54,7 @@
     {{ content_for_header }}
   </head>
 
-  <body id="theme-noor" class="{{ body_classes }}{% if enable_rtl %} rtl{% endif %}" {% if template.name == 'product' %} data-product-id="{{ product.id }}" {% endif %}>
+  <body id="theme-noksha" class="{{ body_classes }}{% if enable_rtl %} rtl{% endif %}" {% if template.name == 'product' %} data-product-id="{{ product.id }}" {% endif %}>
     {% sections 'header-group' %}
 
     {{ content_for_layout }}
