--- a/sections/sidebar.liquid
+++ b/sections/sidebar.liquid
@@ -161,7 +161,7 @@
       "type": "text",
       "id": "brand_text",
       "label": "Brand text",
-      "default": "Noor"
+      "default": "Noksha"
     }
   ],
   "presets": [
